Node sockets location bug after a keyframe is inserted #69127

Closed
opened 2019-08-24 22:34:19 +02:00 by Martin Schläpfer · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-22 20:40, hash: 1de7717ed7
Worked: version: 2.81 (sub ?), branch: master, commit date: 2019-08-18 20:41, hash: 10001d9099

  • Factory Settings and default startup.blend

Short description of error
After inserting any type of keyframe for any object, node sockets in the node editor are no longer properly aligned to their respective values on a node.
When moving the editor view or a node itself, the sockets jump and flicker in close proximity to where they should be located.

Exact steps for others to reproduce the error
Way 1:

  • Open Blender.
  • Select the default cube, camera or light.
  • Hit - and insert a keyframe (Loc, Rot, ...etc. doesn't matter).
  • Switch to the 'Shading' workspace and move the default Principled BSDF of the default cube around to see the bug.
    Way 2:
  • Open Blender.
  • Switch to the 'Shading' workspace and select an object in the 3D-view.
  • Hit - and insert a keyframe (Loc, Rot, ...etc. doesn't matter).
  • Selecting the default cube and moving the default Principled BSDF around, everything seems fine.

Switch back to the 'Layout' workspace and right after that switch again, back to the 'Shading' workspace: Same result as in way 1.

  • The bug affects all node editors, not just the Shader editor.
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-22 20:40, hash: `1de7717ed7` Worked: version: 2.81 (sub ?), branch: master, commit date: 2019-08-18 20:41, hash: `10001d9099` * Factory Settings and default startup.blend **Short description of error** After inserting any type of keyframe for any object, node sockets in the node editor are no longer properly aligned to their respective values on a node. When moving the editor view or a node itself, the sockets jump and flicker in close proximity to where they should be located. **Exact steps for others to reproduce the error** **Way 1:** - Open Blender. - Select the default cube, camera or light. - Hit - [x] and insert a keyframe (Loc, Rot, ...etc. doesn't matter). - Switch to the 'Shading' workspace and move the default Principled BSDF of the default cube around to see the bug. **Way 2:** - Open Blender. - Switch to the 'Shading' workspace and select an object in the 3D-view. - Hit - [x] and insert a keyframe (Loc, Rot, ...etc. doesn't matter). - Selecting the default cube and moving the default Principled BSDF around, everything seems fine. # Switch back to the 'Layout' workspace and right after that switch again, back to the 'Shading' workspace: Same result as in way 1. * The bug affects all node editors, not just the Shader editor.

Added subscriber: @Ashpaw

Added subscriber: @Ashpaw
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

I can confirm using Way 1 that this is indeed broken in 1de7717ed7

The sockets appear to be snapped to the background grid when the node is moved around.

Nodes.jpg

I can confirm using **Way 1** that this is indeed broken in 1de7717ed7 The sockets appear to be snapped to the background grid when the node is moved around. ![Nodes.jpg](https://archive.blender.org/developer/F7702409/Nodes.jpg)
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Missing setting ViewportSize fixes this
introduced in 2ba233a31f

diff --git a/source/blender/editors/space_node/node_draw.c b/source/blender/editors/space_node/node_draw.c
index 642f90407fe..6dc2182b684 100644
--- a/source/blender/editors/space_node/node_draw.c
+++ b/source/blender/editors/space_node/node_draw.c
@@ -951,6 +951,7 @@ void node_draw_sockets(View2D *v2d,
   GPU_program_point_size(true);
   immBindBuiltinProgram(GPU_SHADER_KEYFRAME_DIAMOND);
   immUniform1f("outline_scale", 0.7f);
+  immUniform2f("ViewportSize", -1.0f, -1.0f);
 
   /* set handle size */
   float scale;

Missing setting ViewportSize fixes this introduced in 2ba233a31f ``` diff --git a/source/blender/editors/space_node/node_draw.c b/source/blender/editors/space_node/node_draw.c index 642f90407fe..6dc2182b684 100644 --- a/source/blender/editors/space_node/node_draw.c +++ b/source/blender/editors/space_node/node_draw.c @@ -951,6 +951,7 @@ void node_draw_sockets(View2D *v2d, GPU_program_point_size(true); immBindBuiltinProgram(GPU_SHADER_KEYFRAME_DIAMOND); immUniform1f("outline_scale", 0.7f); + immUniform2f("ViewportSize", -1.0f, -1.0f); /* set handle size */ float scale; ```

This issue was referenced by f2c3dc94b1

This issue was referenced by f2c3dc94b1cd0bed17863faa0c6044edb29d6566
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Charlie Jolly self-assigned this 2019-08-25 17:38:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69127
No description provided.