Fix T69127: Node sockets location bug after a keyframe is inserted